hphp/hack/test/typecheck/coeffects/strict-contexts/leak_safe_callee.php.exp
File "leak_safe_callee.php", line 26, characters 3-10:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "leak_safe_callee.php", line 23, characters 51-76:
  From this declaration, the context of this function body provides the capability set {AccessGlobals, WriteProperty}
  File "leak_safe_callee.php", line 3, characters 19-27:
  But the function being called requires the capability set {ReadGlobals, System, WriteProperty}
